atg/torch_wrapper_gen.odin

	atg__sparse_coo_tensor_unsafe :: proc(out: ^Tensor, indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, options_kind: c.int, options_device: c.int, is_coalesced: c.int) ---
	atg__sparse_coo_tensor_with_dims :: proc(out: ^Tensor, sparse_dim: i64, dense_dim: i64, size_data: [^]i64, size_len: c.int, options_kind: c.int, options_device: c.int) ---
	atg__sparse_coo_tensor_with_dims_and_tensors :: proc(out: ^Tensor, sparse_dim: i64, dense_dim: i64, size_data: [^]i64, size_len: c.int, indices: Tensor, values: Tensor, options_kind: c.int, options_device: c.int, is_coalesced: c.int) ---
	atg__sparse_coo_tensor_with_dims_and_tensors_out :: proc(out: ^Tensor, sparse_dim: i64, dense_dim: i64, size_data: [^]i64, size_len: c.int, indices: Tensor, values: Tensor, is_coalesced: c.int) ---
	atg__sparse_coo_tensor_with_dims_out :: proc(out: ^Tensor, sparse_dim: i64, dense_dim: i64, size_data: [^]i64, size_len: c.int) ---
	atg__sparse_csc_tensor_unsafe :: proc(out: ^Tensor, ccol_indices: Tensor, row_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, options_kind: c.int, options_device: c.int) ---
	atg__sparse_csr_prod :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int, dtype: c.int) ---
	atg__sparse_csr_prod_dim_dtype_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int, dtype: c.int) ---
	atg__sparse_csr_sum :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int, dtype: c.int) ---
	atg__sparse_csr_sum_dim_dtype_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int, dtype: c.int) ---
	atg__sparse_csr_tensor_unsafe :: proc(out: ^Tensor, crow_indices: Tensor, col_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, options_kind: c.int, options_device: c.int) ---
	atg__sparse_log_softmax :: proc(out: ^Tensor, self: Tensor, dim: i64, half_to_float: c.int) ---
	atg__sparse_log_softmax_backward_data :: proc(out: ^Tensor, grad_output: Tensor, output: Tensor, dim: i64, self: Tensor) ---
	atg__sparse_log_softmax_backward_data_out :: proc(out: ^Tensor, grad_output: Tensor, output: Tensor, dim: i64, self: Tensor) ---
	atg__sparse_log_softmax_int :: proc(out: ^Tensor, self: Tensor, dim: i64, dtype: c.int) ---
	atg__sparse_log_softmax_out :: proc(out: ^Tensor, self: Tensor, dim: i64, half_to_float: c.int) ---
	atg__sparse_mask_projection :: proc(out: ^Tensor, self: Tensor, mask: Tensor, accumulate_matches: c.int) ---
	atg__sparse_mask_projection_out :: proc(out: ^Tensor, self: Tensor, mask: Tensor, accumulate_matches: c.int) ---
	atg__sparse_mm :: proc(out: ^Tensor, sparse: Tensor, dense: Tensor) ---
	atg__sparse_mm_reduce :: proc(out: ^Tensor, sparse: Tensor, dense: Tensor, reduce_ptr: cstring, reduce_len: c.int) ---
	atg__sparse_mm_reduce_impl :: proc(out: ^Tensor, self: Tensor, other: Tensor, reduce_ptr: cstring, reduce_len: c.int) ---
	atg__sparse_semi_structured_apply :: proc(out: ^Tensor, input: Tensor, thread_masks: Tensor) ---
	atg__sparse_semi_structured_apply_dense :: proc(out: ^Tensor, input: Tensor, thread_masks: Tensor) ---
	atg__sparse_semi_structured_linear :: proc(out: ^Tensor, input: Tensor, weight: Tensor, meta: Tensor, bias: Tensor, activation_ptr: cstring, activation_len: c.int, out_dtype: c.int) ---
	atg__sparse_semi_structured_mm :: proc(out: ^Tensor, mat1: Tensor, mat1_meta: Tensor, mat2: Tensor, out_dtype: c.int) ---
	atg__sparse_semi_structured_tile :: proc(out: ^Tensor, input: Tensor, algorithm_ptr: cstring, algorithm_len: c.int, use_cutlass: c.int) ---
	atg__sparse_softmax :: proc(out: ^Tensor, self: Tensor, dim: i64, half_to_float: c.int) ---
	atg__sparse_softmax_backward_data :: proc(out: ^Tensor, grad_output: Tensor, output: Tensor, dim: i64, self: Tensor) ---
	atg__sparse_softmax_backward_data_out :: proc(out: ^Tensor, grad_output: Tensor, output: Tensor, dim: i64, self: Tensor) ---
	atg__sparse_softmax_int :: proc(out: ^Tensor, self: Tensor, dim: i64, dtype: c.int) ---
	atg__sparse_softmax_out :: proc(out: ^Tensor, self: Tensor, dim: i64, half_to_float: c.int) ---
	atg__sparse_sparse_matmul :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg__sparse_sparse_matmul_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg__sparse_sum :: proc(out: ^Tensor, self: Tensor) ---
	atg__sparse_sum_backward :: proc(out: ^Tensor, grad: Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int) ---
	atg__sparse_sum_backward_out :: proc(out: ^Tensor, grad: Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int) ---
	atg__sparse_sum_dim :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int) ---
	atg__sparse_sum_dim_dtype :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, dtype: c.int) ---
	atg__sparse_sum_dim_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int) ---
	atg__sparse_sum_dtype :: proc(out: ^Tensor, self: Tensor, dtype: c.int) ---
	atg__spdiags :: proc(out: ^Tensor, diagonals: Tensor, offsets: Tensor, shape_data: [^]i64, shape_len: c.int, layout: rawptr) ---
	atg__spdiags_out :: proc(out: ^Tensor, diagonals: Tensor, offsets: Tensor, shape_data: [^]i64, shape_len: c.int, layout: rawptr) ---
	atg__spsolve :: proc(out: ^Tensor, A: Tensor, B: Tensor, left: c.int) ---
	atg__stack :: proc(out: ^Tensor, tensors_data: ^Tensor, tensors_len: c.int, dim: i64) ---
	atg__stack_out :: proc(out: ^Tensor, tensors_data: ^Tensor, tensors_len: c.int, dim: i64) ---
	atg__standard_gamma :: proc(out: ^Tensor, self: Tensor) ---
	atg__standard_gamma_grad :: proc(out: ^Tensor, self: Tensor, output: Tensor) ---
	atg__standard_gamma_grad_out :: proc(out: ^Tensor, self: Tensor, output: Tensor) ---
	atg__standard_gamma_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__test_ambiguous_defaults :: proc(out: ^Tensor, dummy: Tensor, a: i64, b: i64) ---
	atg__test_ambiguous_defaults_b :: proc(out: ^Tensor, dummy: Tensor, a: i64, b_ptr: cstring, b_len: c.int) ---
	atg__test_autograd_multiple_dispatch :: proc(out: ^Tensor, self: Tensor) ---
	atg__test_autograd_multiple_dispatch_fullcoverage_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__test_autograd_multiple_dispatch_ntonly :: proc(out: ^Tensor, self: Tensor, b: c.int) ---
	atg__test_autograd_multiple_dispatch_view :: proc(out: ^Tensor, self: Tensor) ---
	atg__test_autograd_multiple_dispatch_view_copy :: proc(out: ^Tensor, self: Tensor) ---
	atg__test_autograd_multiple_dispatch_view_copy_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__test_check_tensor :: proc(out: ^Tensor, self: Tensor) ---
	atg__test_functorch_fallback :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg__test_functorch_fallback_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg__test_optional_filled_intlist :: proc(out: ^Tensor, values: Tensor, addends_data: [^]i64, addends_len: c.int) ---
	atg__test_optional_filled_intlist_out :: proc(out: ^Tensor, values: Tensor, addends_data: [^]i64, addends_len: c.int) ---
	atg__test_optional_floatlist :: proc(out: ^Tensor, values: Tensor, addends_data: [^]f64, addends_len: c.int) ---
	atg__test_optional_floatlist_out :: proc(out: ^Tensor, values: Tensor, addends_data: [^]f64, addends_len: c.int) ---
	atg__test_optional_intlist :: proc(out: ^Tensor, values: Tensor, addends_data: [^]i64, addends_len: c.int) ---
	atg__test_optional_intlist_out :: proc(out: ^Tensor, values: Tensor, addends_data: [^]i64, addends_len: c.int) ---
	atg__test_parallel_materialize :: proc(out: ^Tensor, self: Tensor, num_parallel: i64, skip_first: c.int) ---
	atg__test_serialization_subcmul :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg__test_string_default :: proc(out: ^Tensor, dummy: Tensor, a_ptr: cstring, a_len: c.int, b_ptr: cstring, b_len: c.int) ---
	atg__test_warn_in_autograd :: proc(out: ^Tensor, self: Tensor) ---
	atg__test_warn_in_autograd_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__to_copy :: proc(out: ^Tensor, self: Tensor, options_kind: c.int, options_device: c.int, non_blocking: c.int) ---
	atg__to_copy_out :: proc(out: ^Tensor, self: Tensor, non_blocking: c.int) ---
	atg__to_dense :: proc(out: ^Tensor, self: Tensor, dtype: c.int, masked_grad: c.int) ---
	atg__to_dense_out :: proc(out: ^Tensor, self: Tensor, dtype: c.int, masked_grad: c.int) ---
	atg__to_sparse :: proc(out: ^Tensor, self: Tensor, layout: rawptr, blocksize_data: [^]i64, blocksize_len: c.int, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_bsc :: proc(out: ^Tensor, self: Tensor, blocksize_data: [^]i64, blocksize_len: c.int, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_bsc_out :: proc(out: ^Tensor, self: Tensor, blocksize_data: [^]i64, blocksize_len: c.int, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_bsr :: proc(out: ^Tensor, self: Tensor, blocksize_data: [^]i64, blocksize_len: c.int, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_bsr_out :: proc(out: ^Tensor, self: Tensor, blocksize_data: [^]i64, blocksize_len: c.int, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_csc :: proc(out: ^Tensor, self: Tensor, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_csc_out :: proc(out: ^Tensor, self: Tensor, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_csr :: proc(out: ^Tensor, self: Tensor, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_csr_out :: proc(out: ^Tensor, self: Tensor, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_out :: proc(out: ^Tensor, self: Tensor, layout: rawptr, blocksize_data: [^]i64, blocksize_len: c.int, dense_dim_v: i64, dense_dim_null: rawptr) ---
	atg__to_sparse_semi_structured :: proc(out: ^Tensor, dense: Tensor) ---
	atg__to_sparse_sparse_dim :: proc(out: ^Tensor, self: Tensor, sparse_dim: i64) ---
	atg__to_sparse_sparse_dim_out :: proc(out: ^Tensor, self: Tensor, sparse_dim: i64) ---
	atg__transform_bias_rescale_qkv :: proc(out: ^Tensor, qkv: Tensor, qkv_bias: Tensor, num_heads: i64) ---
	atg__transform_bias_rescale_qkv_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, out2: Tensor, qkv: Tensor, qkv_bias: Tensor, num_heads: i64) ---
	atg__transformer_encoder_layer_fwd :: proc(out: ^Tensor, src: Tensor, embed_dim: i64, num_heads: i64, qkv_weight: Tensor, qkv_bias: Tensor, proj_weight: Tensor, proj_bias: Tensor, use_gelu: c.int, norm_first: c.int, eps: f64, norm_weight_1: Tensor, norm_bias_1: Tensor, norm_weight_2: Tensor, norm_bias_2: Tensor, ffn_weight_1: Tensor, ffn_bias_1: Tensor, ffn_weight_2: Tensor, ffn_bias_2: Tensor, mask: Tensor, mask_type_v: i64, mask_type_null: rawptr) ---
	atg__transformer_encoder_layer_fwd_out :: proc(out: ^Tensor, src: Tensor, embed_dim: i64, num_heads: i64, qkv_weight: Tensor, qkv_bias: Tensor, proj_weight: Tensor, proj_bias: Tensor, use_gelu: c.int, norm_first: c.int, eps: f64, norm_weight_1: Tensor, norm_bias_1: Tensor, norm_weight_2: Tensor, norm_bias_2: Tensor, ffn_weight_1: Tensor, ffn_bias_1: Tensor, ffn_weight_2: Tensor, ffn_bias_2: Tensor, mask: Tensor, mask_type_v: i64, mask_type_null: rawptr) ---
	atg__trilinear :: proc(out: ^Tensor, i1: Tensor, i2: Tensor, i3: Tensor, expand1_data: [^]i64, expand1_len: c.int, expand2_data: [^]i64, expand2_len: c.int, expand3_data: [^]i64, expand3_len: c.int, sumdim_data: [^]i64, sumdim_len: c.int, unroll_dim: i64) ---
	atg__trilinear_out :: proc(out: ^Tensor, i1: Tensor, i2: Tensor, i3: Tensor, expand1_data: [^]i64, expand1_len: c.int, expand2_data: [^]i64, expand2_len: c.int, expand3_data: [^]i64, expand3_len: c.int, sumdim_data: [^]i64, sumdim_len: c.int, unroll_dim: i64) ---
	atg__triton_multi_head_attention :: proc(out: ^Tensor, query: Tensor, key: Tensor, value: Tensor, embed_dim: i64, num_head: i64, qkv_weight: Tensor, qkv_bias: Tensor, proj_weight: Tensor, proj_bias: Tensor, mask: Tensor) ---
